# LunaBot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACYPOLICY.md  README.md  TOS.md  conf.py  database_conf.py  db_new.py  example.env  func.py  icon.kra  logs.py  main.py  pyproject.toml  requirements.txt  server_config.py
assets/: banner.kra
bot/: __init__.py  banner.py  banner.txt  config.py  database.py  logs.py  luna.py
bot/luna_api/: __init__.py  color.py  emoji.py  permission.py
bot/modules/: __init__.py
bot/modules/developer/: __init__.py  cogs.py
bot/modules/economy/: __init__.py  cogs.py  models.py  repositories.py  services.py
bot/modules/helloworld/: __init__.py  cogs.py  models.py  repositories.py  services.py
bot/modules/moderation/: __init__.py  cogs.py  embeds.py  models.py  repositories.py  services.py  views.py
cogs/: admin.py  autoroles.py  calc.py  economy.py  fun.py  games.py  github.py  plug.py  reactionbot.py  reactionroles.py  utils.py  voice.py  welcome.py
docs/: ADDING_COGS.md  CODEBASE.md  INDEX.md  USING.md
luna-old/: conf.py  db_new.py
unmigrated-cogs/: github.py  utils.py  voice.py
